Fix: Tables squash words on narrow displays
Closes #39
- Changed table row and table data to `overflow-wrap: normal`.
- Change was made directly to Quartz `base.scss` by placing it at the bottom of the scss file, rather than amending it directly. This ensure it overwrites in the cascade, and is less likely to present merge conflicts when updating Quartz.

--- a/quartz/styles/base.scss
+++ b/quartz/styles/base.scss
@@ -519,3 +519,12 @@ ol.overflow {
   overflow-x: auto;
   overflow-y: hidden;
 }
+
+/* ====================================== */
+/* -- Below are MMW Edits to base.scss -- */
+
+tr,
+td {
+  overflow-wrap: normal;
+  /* Prevents words in tables being broken on narrow displays */
+}
